--- a/contact/index.html
+++ b/contact/index.html
@@ -1,12 +1,9 @@
 <!--
- _____ _____ ____          _ __  __ ___
-|_   _| ____|  _ \__  __  | |  \/  |_ _|
-  | | |  _| | | | \ \/ /  | | |\/| || |
-  | | | |___| |_| |>  < |_| | |  | || |
-  |_| |_____|____//_/\_\___/|_|  |_|___|
+Teknothon 2018 
 
-Event website by Syed Faheel Ahmad (github.com/faheel)
+Event website by @SahilQaiser, Adapted from TEDxJMI project by Syed Faheel Ahmad (github.com/faheel)
 -->
+
 
 <!DOCTYPE html>
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7" lang="en"> <![endif]-->
@@ -22,24 +19,24 @@ Event website by Syed Faheel Ahmad (github.com/faheel)
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
   <!-- Title, icon, description and keywords -->
-  <title>Contact Us | TEDxJMI</title>
-  <link rel="shortcut icon" href="../res/images/favicon.ico">
-  <meta name="description" content="Contact us at TEDxJMI, x = independently organised TED event. Igniting Minds. This October, at Jamia Millia Islamia.">
-  <meta name="keywords" content="TEDx, JMI, Jamia Millia Islamia, New Delhi, event, talks">
+  <title>TEKNOTHON 2018</title>
+  <link rel="shortcut icon" href="res/images/favicon.ico">
+  <meta name="description" content="TEKNOTHON - A Techno-Cultural event Organized by Department of Computer Science JMI. This March, at Jamia Millia Islamia.">
+  <meta name="keywords" content="Teknothon, JMI, Jamia Millia Islamia, New Delhi, event">
 
   <!-- Social media tags -->
   <!-- Open Graph -->
-  <meta property="og:title" content="Contact us at TEDxJMI">
-  <meta property="og:description" content="TEDxJMI - Igniting Minds. This October, at Jamia Millia Islamia.">
-  <meta property="og:image" content="https://tedxjmi.com/res/images/logos/light-social.jpg">
-  <meta property="og:url" content="https://tedxjmi.com/contact">
+  <meta property="og:title" content="TEKNOTHON">
+  <meta property="og:description" content="A Techno-Cultural Event. This March, at Jamia Millia Islamia.">
+  <meta property="og:image" content="res/images/logos/light-social.jpg">
+  <meta property="og:url" content="https://Teknothon.github.io">
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:site" content="@TEDx_JMI">
+  <meta name="twitter:site" content="@sahilqaiser">
   <!-- Google+ -->
-  <meta itemprop="name" content="Contact us at TEDxJMI">
-  <meta itemprop="description" content="TEDxJMI - Igniting Minds. This October, at Jamia Millia Islamia.">
-  <meta itemprop="image" content="https://tedxjmi.com/res/images/logos/light-social.jpg">
+  <meta itemprop="name" content="sahilqaiser">
+  <meta itemprop="description" content="A Techno-Cultural Event. This March, at Jamia Millia Islamia.">
+  <meta itemprop="image" content="res/images/logos/light-social.jpg">
 
   <!-- Browser themes -->
   <meta name="theme-color" content="#000">
@@ -59,7 +56,7 @@ Event website by Syed Faheel Ahmad (github.com/faheel)
   <link rel="stylesheet" href="../res/css/style.css">
 
   <!-- Color skin -->
-  <link rel="stylesheet" href="../res/css/color_red.css">
+  <link rel="stylesheet" href="../res/css/color_blue.css">
 
   <!-- Modernizr JS for IE8 support of HTML5 elements and media queries -->
   <!--[if lt IE 8]>
@@ -89,15 +86,15 @@ Event website by Syed Faheel Ahmad (github.com/faheel)
 
         <div id="navbar" class="navbar-collapse collapse col-lg-9 pull-right">
           <ul class="nav navbar-nav font-family-alt letter-spacing-1 text-uppercase font-weight-700">
-            <li><a href="/" class="line-height-unset">About</a></li>
-            <li><a href="/speakers/" class="line-height-unset">Speakers</a></li>
-            <li><a href="/our-team/" class="line-height-unset">Our Team</a></li>
-            <li><a href="/alumni/" class="line-height-unset">Alumni</a></li>
+            <li><a href="/" class="line-height-unset">Home</a></li>
+            <li><a href="/about/" class="line-height-unset">About</a></li>
+            <li><a href="#page-top" class="line-height-unset">Our Team</a></li>
+            <li><a href="#page-top" class="line-height-unset">Events</a></li>
             <li><a href="/sponsors/" class="line-height-unset">Sponsors</a></li>
             <li><a href="#page-top" class="page-scroll">Contact Us</a></li>
             <li class="bg-base-color">
               <a href="/register/" class="line-height-unset width-100">
-                Register
+                Sponsorship Registration
               </a>
             </li>
           </ul>
@@ -132,7 +129,7 @@ Event website by Syed Faheel Ahmad (github.com/faheel)
             <i class="fa fa-envelope-o display-block text-base-color title-extra-large-2"></i>
             <br>
             <h4 class="font-weight-300 letter-spacing-1">
-              tedxjmi2017@gmail.com
+              teknothon.dcs@gmail.com<br>info@teknothon.tech
             </h4>
           </div>
           <!-- //.row -->
@@ -141,30 +138,46 @@ Event website by Syed Faheel Ahmad (github.com/faheel)
             Send us your queries by email.<br>
             We endeavour to answer them all within 24 hours.
           </p>
-
           <br>
-          <form name="contact" action="thank-you" method="post" id="form-contact" netlify>
-            <div class="row margin-4 no-margin-rl">
-              <input type="text" placeholder="Your Name" name="name" class="required" required>
-              <input type="email" placeholder="Your Email" name="email" class="required email" required>
-              <textarea placeholder="Your Message" name="message" class="required" required></textarea>
-            </div>
-            <!-- //.row -->
+          <div>
+            <div>
+                <form id="gform" method="POST" class="pure-form pure-form-stacked" data-email="teknothon.dcs@gmail.com"
+                action="https://script.google.com/macros/s/AKfycbx5a5GlN_O8iaHFhwDpTECh5lXNCgxwHwijD2g_upQ804s-n-ro/exec">
+                  <div class="row margin-4 no-margin-rl">
+                    <input type="text" placeholder="Your Name" id="name" name="name">
+                    <input type="email" placeholder="Your Email" id="email" name="email" value="">
+                    <textarea placeholder="Your Message" id="message" name="message"></textarea>
+                  </div>
+                  <!-- //.row -->
 
-            <div class="row margin-4 no-margin-rl">
-              <span class="display-block font-family-alt letter-spacing-1 text-gray-dark-2 text-small text-uppercase">
-                * Please enter all fields correctly
-              </span>
-            </div>
-            <!-- //.row -->
+                  <div class="row margin-4 no-margin-rl">
+                    <span class="display-block font-family-alt letter-spacing-1 text-gray-dark-2 text-small text-uppercase">
+                      * Please enter all fields correctly
+                    </span>
+                  </div>
+                  <!-- //.row -->
 
-            <div class="row margin-4 no-margin-rl">
-              <button id="btn-form-contact" type="submit" class="btn btn-base-color btn-medium">
-                Send Message
-              </button>
+                  <div class="row margin-4 no-margin-rl">
+                    <button id="btn-form-contact" type="submit" class="btn btn-base-color btn-medium">
+                      Send Message
+                    </button>
+                  </div>
+                  <!-- //.row -->
+                </form>
+                <!-- Customise the Thankyou Message People See when they submit the form: -->
+            <div style="display:none;" id="thankyou_message">
+                <h2><em>Thanks</em> for contacting us!
+                  We will get back to you soon!</h2>
+              </div>
+  
+              <!-- Submit the Form to Google Using "AJAX" -->
+              <script data-cfasync="false" type="text/javascript"
+              src="https://cdn.rawgit.com/dwyl/html-form-send-email-via-google-script-without-server/master/form-submission-handler.js"></script>
+              <!-- <script data-cfasync="false" type="text/javascript"
+              src="/form-submission-handler.js"></script> -->
+            <!-- END -->
             </div>
-            <!-- //.row -->
-          </form>
+          </div>
         </div>
         <!-- //.col-md-5 -->
 
@@ -177,7 +190,7 @@ Event website by Syed Faheel Ahmad (github.com/faheel)
             <br>
             <h4 class="font-weight-300 letter-spacing-1">
               Jamia Millia Islamia
-              <br>Maulana Mohammad Ali Jauhar Marg
+              <br>Department of Computer Science
               <br>Jamia Nagar
               <br>New Delhi 110025
             </h4>
@@ -186,7 +199,7 @@ Event website by Syed Faheel Ahmad (github.com/faheel)
           <div class="row text-center">
             <div class="margin-8 no-margin-bottom no-margin-rl map">
               <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3504.2906312479427!2d77.28254455362033!3d28.56103426474026!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xfb09de6f2e8596e7!2sJamia+Millia+Islamia!5e0!3m2!1sen!2sin!4v1497486772213"
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3504.2186197676856!2d77.27821691451206!3d28.563197193967753!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390ce38c812c0029%3A0x73f56fbe2fc71d28!2sDepartment+of+Computer+Science!5e0!3m2!1sen!2sin!4v1520092804003"
                 frameborder="0"
                 allowfullscreen>
               </iframe>
@@ -215,7 +228,7 @@ Event website by Syed Faheel Ahmad (github.com/faheel)
             Date &amp; Time
           </span>
           <p class="margin-3 font-family-alt no-margin-bottom no-margin-rl title-small text-gray-dark-2">
-            October 16, 2017<br>
+            March 26,27 2018<br>
             10 AM to 5 PM
           </p>
         </div>
@@ -227,15 +240,15 @@ Event website by Syed Faheel Ahmad (github.com/faheel)
             Venue
           </span>
           <p class="margin-3 font-family-alt no-margin-bottom no-margin-rl title-small text-gray-dark-2">
-            Dr. M. A. Ansari Auditorium,<br>
+            Department of Computer Science,<br>
             Jamia Millia Islamia
           </p>
         </div>
         <!-- //.col-sm-4 -->
 
         <div id="banner-registration" class="col-sm-4 xs-margin-8 xs-no-margin-bottom xs-no-margin-rl text-center">
-          <a href="/res/insider_guide.pdf" class="btn btn-outline-base-color sm-btn-medium btn-large no-margin-rl">
-            <span>Download<br>insider guide</span>
+          <a href="/register/" class="btn btn-outline-base-color sm-btn-medium btn-large no-margin-rl">
+            <span>Register for<br>Sponsorship</span>
           </a>
         </div>
         <!-- //.col-sm-4 -->
@@ -297,7 +310,7 @@ Event website by Syed Faheel Ahmad (github.com/faheel)
           </div>
           <!-- //.footer-logo -->
           <p class="disclaimer xs-text-center">
-            This independent TEDx event is operated under license from TED.
+            COPYRIGHT by TEKNOTHON
           </p>
           <!-- //.disclaimer -->
         </div>
@@ -305,10 +318,10 @@ Event website by Syed Faheel Ahmad (github.com/faheel)
 
         <div class="col-sm-8">
           <div class="footer-social text-right">
-            <ul class="list-inline list-unstyled no-margin xs-text-center xs-title-small title-medium">
-              <li><a href="https://www.facebook.com/tedxjmi/"><i class="fa fa-facebook"></i></a></li>
-              <li><a href="https://twitter.com/TEDx_JMI"><i class="fa fa-twitter"></i></a></li>
-              <li><a href="https://www.instagram.com/tedxjmi/"><i class="fa fa-instagram"></i></a></li>
+              <ul class="list-inline list-unstyled no-margin xs-text-center xs-title-small title-medium">
+                <li><a href="https://facebook.com/teknothon.dcs"><i class="fa fa-facebook"></i></a></li>
+                <li><a href="https://twitter.com/sahilqaiser"><i class="fa fa-twitter"></i></a></li>
+                <li><a href="https://instagram.com/teknothon2018"><i class="fa fa-instagram"></i></a></li>
             </ul>
           </div>
           <!-- //.footer-social -->
