--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ Event website by @SahilQaiser, Adapted from TEDxJMI project by Syed Faheel Ahmad
         <div id="navbar" class="navbar-collapse collapse col-lg-9 pull-right">
           <ul class="nav navbar-nav font-family-alt letter-spacing-1 text-uppercase font-weight-700">
             <li><a href="#page-top" class="page-scroll">Home</a></li>
-            <li><a href="#page-top" class="line-height-unset">About</a></li>
+            <li><a href="/about/" class="line-height-unset">About</a></li>
             <li><a href="#page-top" class="line-height-unset">Our Team</a></li>
             <li><a href="#page-top" class="line-height-unset">Events</a></li>
             <li><a href="/sponsors/" class="line-height-unset">Sponsors</a></li>
@@ -241,13 +241,12 @@ Event website by @SahilQaiser, Adapted from TEDxJMI project by Syed Faheel Ahmad
           <div class="row">
             <div class="col-md-12">
               <p class="font-family-alt margin-5-5 no-margin-bottom no-margin-rl sm-text-large text-extra-large text-gray-dark-2">
-                A Techno-Cultural Event. This March, at Jamia Millia Islamia.
-Details Awaited
-              </p>
+                  Growing from a humble beginning in 2011, Teknothon is the annual techno-cultural festival which promotes liberty, energy, enthusiasm and provides students with the opportunity to explore and rediscover themselves.
+                  Coupled with the legacy of fellowship and pride, Teknothon is one of the largest collegiate festival celebrations hence one of the most eagerly anticipated events in the University calendar. A programme of intriguing events will be held in a variety of venues at the heart of the campus, with something to cater to all tastes. With over 20+ events spanning across dynamic venues over 2 full days, Teknothon is an exhilarating experience from beginning to end.
+                  </p>
 
               <p class="font-family-alt margin-5-5 no-margin-bottom no-margin-rl sm-text-large text-extra-large text-gray-dark-2">
-                We are focused on ......
-Our event strategically allocates a window for ........
+                  With the rise in the number of participants, we strive to render the festival better every coming year by maintaining cordial relations with corporate community ensuring sponsorship for the fest and extensive publicity for the company.
               </p>
             </div>
             <!-- //.col-sm-6 -->
@@ -257,18 +256,27 @@ Our event strategically allocates a window for ........
         <!-- //.col-sm-6 -->
 
         <div class="col-sm-6 col-md-4 col-md-offset-1 xs-margin-8 xs-no-margin-rl xs-no-margin-bottom">
-          <div class="testimonial">
-            <div class="bg-white border border-gray-light border-round padding-5 width-100">
-              <h4 class="font-weight-700 font-family-alt">
-                About Teknothon
-              </h4>
-              <br>
-              <p class="no-margin text-gray-dark- text-large">
-                A Techno-Cultural Event. This March, at Jamia Millia Islamia.
-              </p>
-            </div>
-            <!-- //.bg-white -->
-          </div>
+            <div class="testimonial">
+                <div class="bg-white border border-gray-light border-round padding-5 width-100">
+                  <h4 class="font-weight-700 font-family-alt">
+                    Teknothon Time Table
+                  </h4>
+                  <br>
+                  <p class="no-margin text-gray-dark- text-large">
+                      10:00 AM - Teknothon Will be InAugurated at Department of Computer Science.
+                    </p>
+                </div>
+                <!-- //.bg-white -->
+              </div>
+              <div class="testimonial">
+                  <div class="bg-white border border-gray-light border-round padding-5 width-100">
+                    <br>
+                    <p class="no-margin text-gray-dark- text-large">
+                        01:00 PM - Lunch Break
+                        </p>
+                  </div>
+                  <!-- //.bg-white -->
+                </div>
           <!-- //.testimonial -->
         </div>
         <!-- //.col-sm-6 -->
