--- a/sponsors/index.html
+++ b/sponsors/index.html
@@ -86,11 +86,11 @@ Event website by @SahilQaiser, Adapted from TEDxJMI project by Syed Faheel Ahmad
         <div id="navbar" class="navbar-collapse collapse col-lg-9 pull-right">
           <ul class="nav navbar-nav font-family-alt letter-spacing-1 text-uppercase font-weight-700">
             <li><a href="/" class="line-height-unset">Home</a></li>
-            <li><a href="#page-top" class="line-height-unset">About</a></li>
+            <li><a href="/about/" class="line-height-unset">About</a></li>
             <li><a href="#page-top" class="line-height-unset">Our Team</a></li>
             <li><a href="#page-top" class="line-height-unset">Events</a></li>
             <li><a href="#page-top" class="page-scroll">Sponsors</a></li>
-            <li><a href="contact" class="line-height-unset">Contact Us</a></li>
+            <li><a href="/contact/" class="line-height-unset">Contact Us</a></li>
             <li class="bg-base-color">
               <a href="/register/" class="line-height-unset width-100">
                 Sponsorship Registration
@@ -242,7 +242,7 @@ Event website by @SahilQaiser, Adapted from TEDxJMI project by Syed Faheel Ahmad
           </div>
           <!-- //.footer-logo -->
           <p class="disclaimer xs-text-center">
-            This independent TEDx event is operated under license from TED.
+            COPYRIGHT by TEKNOTHON
           </p>
           <!-- //.disclaimer -->
         </div>
@@ -251,9 +251,9 @@ Event website by @SahilQaiser, Adapted from TEDxJMI project by Syed Faheel Ahmad
         <div class="col-sm-8">
           <div class="footer-social text-right">
             <ul class="list-inline list-unstyled no-margin xs-text-center xs-title-small title-medium">
-              <li><a href="https://www.facebook.com/tedxjmi/"><i class="fa fa-facebook"></i></a></li>
-              <li><a href="https://twitter.com/TEDx_JMI"><i class="fa fa-twitter"></i></a></li>
-              <li><a href="https://www.instagram.com/tedxjmi/"><i class="fa fa-instagram"></i></a></li>
+                <li><a href="https://facebook.com/teknothon.dcs"><i class="fa fa-facebook"></i></a></li>
+                <li><a href="https://twitter.com/sahilqaiser"><i class="fa fa-twitter"></i></a></li>
+                <li><a href="https://instagram.com/teknothon2018"><i class="fa fa-instagram"></i></a></li>
             </ul>
           </div>
           <!-- //.footer-social -->
