--- a/about/index.html
+++ b/about/index.html
@@ -19,7 +19,7 @@ Event website by @SahilQaiser, Adapted from TEDxJMI project by Syed Faheel Ahmad
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
   <!-- Title, icon, description and keywords -->
-  <title>TEKNOTHON 2018</title>
+  <title>TEKNOTHON 2018 - About</title>
   <link rel="shortcut icon" href="res/images/favicon.ico">
   <meta name="description" content="TEKNOTHON - A Techno-Cultural event Organized by Department of Computer Science JMI. This March, at Jamia Millia Islamia.">
   <meta name="keywords" content="Teknothon, JMI, Jamia Millia Islamia, New Delhi, event">
@@ -91,7 +91,7 @@ Event website by @SahilQaiser, Adapted from TEDxJMI project by Syed Faheel Ahmad
             <li><a href="#page-top" class="line-height-unset">Our Team</a></li>
             <li><a href="#page-top" class="line-height-unset">Events</a></li>
             <li><a href="/sponsors/" class="line-height-unset">Sponsors</a></li>
-            <li><a href="#page-top" class="page-scroll">Contact Us</a></li>
+            <li><a href="/contact/" class="page-scroll">Contact Us</a></li>
             <li class="bg-base-color">
               <a href="/register/" class="line-height-unset width-100">
                 Sponsorship Registration
@@ -107,98 +107,66 @@ Event website by @SahilQaiser, Adapted from TEDxJMI project by Syed Faheel Ahmad
   </nav>
   <!-- //Navigation End -->
 
-
-
-  <!-- Section - Contact Start -->
-  <section id="contact" class="bg-white-2">
-    <div class="container">
-      <div class="row no-padding-rl">
-        <div class="col-md-12">
-          <h2 class="font-family-alt font-weight-700 sm-title-large title-extra-large-2 text-gray-dark-2">
-            Contact Us
-          </h2>
-          <span class="bg-base-color xs-margin-6 xs-no-margin-rl margin-3 no-margin-rl separator-line-extra-thick-long"></span>
+  <!-- Section - About Start -->
+  <br><br>
+  <section id="about" class="bg-white-3 pull-up">
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-6 col-md-7">
+            <h2 class="font-family-alt font-weight-700 sm-title-large title-extra-large-2 text-gray-dark-2">
+              About University
+            </h2>
+            <span class="bg-base-color margin-4 no-margin-bottom no-margin-rl separator-line-extra-thick-long"></span>
+            <div class="row">
+              <div class="col-md-12">
+                <p class="font-family-alt margin-5-5 no-margin-bottom no-margin-rl sm-text-large text-extra-large text-gray-dark-2">
+                <p>    Jamia Millia Islamia, a Central University, renowned for its highly glorious past and an equally promising future, has more than 23,000 students 800+ full time teaching faculty, 9 faculties, 39 departments and more than 200 courses.
+Jamia Millia Islamia (translation: National Islamic University) is a public central universityin Delhi. It was established during British rule in 1920. It became a Central University  by an act of the Indian Parliament in 1988.</p>
+<p>• The University is placed at 12th position among the Universities and 6th position among the central Universities of the country.</p>
+<P>• The University is ranked in 800- 1000 bracket in world ranking by Times Higher Education.</P>
+</p>
+  
+                <p class="font-family-alt margin-5-5 no-margin-bottom no-margin-rl sm-text-large text-extra-large text-gray-dark-2">
+                    With the rise in the number of participants, we strive to render the festival better every coming year by maintaining cordial relations with corporate community ensuring sponsorship for the fest and extensive publicity for the company.
+                </p>
+              </div>
+              <!-- //.col-sm-6 -->
+            </div>
+            <!-- //.row -->
+          </div>
+          <!-- //.col-sm-6 -->
+  
+          <div class="col-sm-6 col-md-4 col-md-offset-1 xs-margin-8 xs-no-margin-rl xs-no-margin-bottom">
+              <div class="testimonial">
+                  <div class="bg-white border border-gray-light border-round padding-5 width-100">
+                    <h4 class="font-weight-700 font-family-alt">
+                      About Department
+                    </h4>
+                    <br>
+                    <p class="no-margin text-gray-dark- text-large">
+                        Department of Computer Science is one of the youngest departments of Faculty of Natural Sciences, Jamia Millia Islamia, one of the most renowned universities of the country.
+                      </p><p>Established in 1999 with a vision to train and develop highly skilled human resource in the field of computer science and bioinformatics and to conduct core and applied research in the thrust areas of computer science.</p>
+                  </div>
+                  <!-- //.bg-white -->
+                </div>
+                <div class="testimonial">
+                    <div class="bg-white border border-gray-light border-round padding-5 width-100">
+                      <br>
+                      <p class="no-margin text-gray-dark- text-large">
+                          The emphasis is on creating an environment for students to explore, experiment, discover and realize their potential. The prime most event hosted by the department is the annual fest, Teknothon.
+                          </p>
+                    </div>
+                    <!-- //.bg-white -->
+                  </div>
+            <!-- //.testimonial -->
+          </div>
+          <!-- //.col-sm-6 -->
         </div>
-        <!-- //.col-md-10 -->
       </div>
-      <!-- //.row -->
+      <!-- //.container -->
+    </section>
+    <!-- //Section - About End -->
 
-      <div class="row margin-4 no-margin-rl no-margin-bottom">
-        <div class="col-md-5 no-padding-rl">
-          <div class="row text-center">
-            <i class="fa fa-envelope-o display-block text-base-color title-extra-large-2"></i>
-            <br>
-            <h4 class="font-weight-300 letter-spacing-1">
-              teknothon.dcs@gmail.com<br>info@teknothon.tech
-            </h4>
-          </div>
-          <!-- //.row -->
-
-          <p class="margin-8 no-margin-bottom no-margin-rl font-family-alt text-extra-large">
-            Send us your queries by email.<br>
-            We endeavour to answer them all within 24 hours.
-          </p>
-
-          <br>
-          <form name="contact" action="thank-you" method="post" id="form-contact" netlify>
-            <div class="row margin-4 no-margin-rl">
-              <input type="text" placeholder="Your Name" name="name" class="required" required>
-              <input type="email" placeholder="Your Email" name="email" class="required email" required>
-              <textarea placeholder="Your Message" name="message" class="required" required></textarea>
-            </div>
-            <!-- //.row -->
-
-            <div class="row margin-4 no-margin-rl">
-              <span class="display-block font-family-alt letter-spacing-1 text-gray-dark-2 text-small text-uppercase">
-                * Please enter all fields correctly
-              </span>
-            </div>
-            <!-- //.row -->
-
-            <div class="row margin-4 no-margin-rl">
-              <button id="btn-form-contact" type="submit" class="btn btn-base-color btn-medium">
-                Send Message
-              </button>
-            </div>
-            <!-- //.row -->
-          </form>
-        </div>
-        <!-- //.col-md-5 -->
-
-        <div class="contact-address col-md-6 col-md-offset-1">
-          <div class="row text-center">
-            <i class="fa fa-map-marker display-block text-base-color title-extra-large-2"></i>
-            <!-- <span class="display-block font-family-alt font-weight-700 letter-spacing-1 margin-5 no-margin-bottom no-margin-rl text-large text-uppercase">
-              Our Location
-            </span> -->
-            <br>
-            <h4 class="font-weight-300 letter-spacing-1">
-              Jamia Millia Islamia
-              <br>Department of Computer Science
-              <br>Jamia Nagar
-              <br>New Delhi 110025
-            </h4>
-          </div>
-          <!-- //.row -->
-          <div class="row text-center">
-            <div class="margin-8 no-margin-bottom no-margin-rl map">
-              <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3504.2186197676856!2d77.27821691451206!3d28.563197193967753!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390ce38c812c0029%3A0x73f56fbe2fc71d28!2sDepartment+of+Computer+Science!5e0!3m2!1sen!2sin!4v1520092804003"
-                frameborder="0"
-                allowfullscreen>
-              </iframe>
-            </div>
-            <!-- //.map -->
-          </div>
-          <!-- //.row -->
-        </div>
-        <!-- //.col-md-6 -->
-      </div>
-      <!-- //.row -->
-    </div>
-    <!-- //.container -->
-  </section>
-  <!-- //Section - Contact End -->
 
 
 
