--- a/index.html
+++ b/index.html
@@ -334,8 +334,9 @@ Event website by @SahilQaiser, Adapted from TEDxJMI project by Syed Faheel Ahmad
       <!-- //.row -->
       <br><br>
       <div class="row">
+
         <!-- Social Box -->
-        <div class="features-box col-sm-6 col-md-4">
+        <div class="features-box col-sm-6 col-md-4 sm-margin-4 sm-no-margin-rl sm-no-margin-bottom">
           <div class="border border-gray-light border-round box-shadow-yes position-relative bg-white">
             <div class="display-table height-100 no-padding-rl padding-7 width-100">
               <div class="display-table-cell no-padding-tb padding-8 vertical-align-middle">
@@ -343,25 +344,12 @@ Event website by @SahilQaiser, Adapted from TEDxJMI project by Syed Faheel Ahmad
                   Facebook
                 </span>
 
-                <!-- Facebook plugin -->
-                <div id="fb-root"></div>
-
-                <script>(function(d, s, id) {
-                  var js, fjs = d.getElementsByTagName(s)[0];
-                  if (d.getElementById(id)) return;
-                  js = d.createElement(s); js.id = id;
-                  js.src = "https://connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v2.10&appId=1530541233879214";
-                  fjs.parentNode.insertBefore(js, fjs);
-                }(document, 'script', 'facebook-jssdk'));</script>
-
-                <div class="fb-page" data-href="https://www.facebook.com/teknothon.dcs/" data-tabs="timeline"
-                    data-small-header="true" data-adapt-container-width="true" data-hide-cover="true"
-                    data-show-facepile="false">
-                  <blockquote cite="https://www.facebook.com/teknothon.dcs/" class="fb-xfbml-parse-ignore">
-                    <a href="https://www.facebook.com/teknothon.dcs/">TEKNOTHON</a>
-                  </blockquote>
+                <!-- Facebook posts -->
+                <script src="https://snapwidget.com/js/snapwidget.js"></script>
+                <div style="height: 500px; overflow-y: auto">
+                  <iframe src="https://snapwidget.com/embed/515548" class="snapwidget-widget" allowTransparency="true" frameborder="0" style="border:none; width:100%;"></iframe>
                 </div>
-                <!-- //Facebook plugin -->
+                <!-- //Facebook posts -->
               </div>
               <!-- //.display-table-cell -->
             </div>
@@ -370,7 +358,6 @@ Event website by @SahilQaiser, Adapted from TEDxJMI project by Syed Faheel Ahmad
           <!-- //.border -->
         </div>
         <!-- //Social Box -->
-
         <!-- Social Box -->
         <div class="features-box col-sm-6 col-md-4 xs-margin-4 xs-no-margin-rl xs-no-margin-bottom">
           <div class="border border-gray-light border-round box-shadow-yes position-relative bg-white">
