--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ Event website by @SahilQaiser, Adapted from TEDxJMI project by Syed Faheel Ahmad
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
   <!-- Title, icon, description and keywords -->
-  <title>TEKNOTHON 2018</title>
+  <title>Home | TEKNOTHON 2018</title>
   <link rel="shortcut icon" href="res/images/favicon.ico">
   <meta name="description" content="TEKNOTHON - A Techno-Cultural event Organized by Department of Computer Science JMI. This March, at Jamia Millia Islamia.">
   <meta name="keywords" content="Teknothon, JMI, Jamia Millia Islamia, New Delhi, event">
@@ -343,7 +343,6 @@ Event website by @SahilQaiser, Adapted from TEDxJMI project by Syed Faheel Ahmad
                 <span class="display-block font-weight-700 letter-spacing-1 text-large text-uppercase margin-4 no-margin-rl no-margin-top text-center">
                   Facebook
                 </span>
-
                 <!-- Facebook posts -->
                 <script src="https://snapwidget.com/js/snapwidget.js"></script>
                 <div style="height: 500px; overflow-y: auto">
