--- a/contact/index.html
+++ b/contact/index.html
@@ -91,7 +91,7 @@ Event website by @SahilQaiser, Adapted from TEDxJMI project by Syed Faheel Ahmad
             <li><a href="#page-top" class="line-height-unset">Our Team</a></li>
             <li><a href="#page-top" class="line-height-unset">Events</a></li>
             <li><a href="/sponsors/" class="line-height-unset">Sponsors</a></li>
-            <li><a href="contact" class="page-scroll">Contact Us</a></li>
+            <li><a href="#page-top" class="page-scroll">Contact Us</a></li>
             <li class="bg-base-color">
               <a href="/register/" class="line-height-unset width-100">
                 Sponsorship Registration
