$ More Logos For Events

--- a/events/index.html
+++ b/events/index.html
@@ -216,7 +216,7 @@ Event website by @SahilQaiser, Adapted from TEDxJMI project by Syed Faheel Ahmad
           <div class="overflow-hidden position-relative width-100">
             <div class="position-relative">
               <div class="img-wrapper">
-                <!-- <img src="../res/images/team/areesha.jpg" alt=""/> -->
+                <img src="../res/images/events/Website5.png" alt=""/>
               </div>
             </div>
             <!-- //.position-relative -->
@@ -236,7 +236,7 @@ Event website by @SahilQaiser, Adapted from TEDxJMI project by Syed Faheel Ahmad
           <div class="overflow-hidden position-relative width-100">
             <div class="position-relative">
               <div class="img-wrapper">
-                <!-- <img src="../res/images/team/najeeb.jpg" alt=""/> -->
+                <img src="../res/images/events/workshop6.png" alt=""/>
               </div>
             </div>
             <!-- //.position-relative -->
@@ -256,7 +256,7 @@ Event website by @SahilQaiser, Adapted from TEDxJMI project by Syed Faheel Ahmad
           <div class="overflow-hidden position-relative width-100">
             <div class="position-relative">
               <div class="img-wrapper">
-                <!--<img src="../res/images/team/ghulam.jpg" alt=""/>-->
+                <img src="../res/images/events/dance7.png" alt=""/>
               </div>
             </div>
             <!-- //.position-relative -->
@@ -276,7 +276,7 @@ Event website by @SahilQaiser, Adapted from TEDxJMI project by Syed Faheel Ahmad
           <div class="overflow-hidden position-relative width-100">
             <div class="position-relative">
               <div class="img-wrapper">
-                <!-- <img src="../res/images/team/shaiq.jpg" alt=""/> -->
+                 <img src="../res/images/events/rock8.png" alt=""/>
               </div>
             </div>
             <!-- //.position-relative -->
