--- a/404.html
+++ b/404.html
@@ -174,10 +174,10 @@ Bouncing Tumbleweed Adapted from @Aidan_Breen from 'https://codepen.io/aido179-1
 
         <div id="navbar" class="navbar-collapse collapse col-lg-9 pull-right">
           <ul class="nav navbar-nav font-family-alt letter-spacing-1 text-uppercase font-weight-700">
-            <li><a href="/" class="line-height-unset">About</a></li>
-            <li><a href="/speakers/" class="line-height-unset">Speakers</a></li>
+            <li><a href="/" class="line-height-unset">Home</a></li>
+            <li><a href="/about/" class="line-height-unset">About</a></li>
             <li><a href="/our-team/" class="line-height-unset">Our Team</a></li>
-            <li><a href="/alumni/" class="line-height-unset">Alumni</a></li>
+            <li><a href="/events/" class="line-height-unset">Events</a></li>
             <li><a href="/sponsors/" class="line-height-unset">Sponsors</a></li>
             <li><a href="/contact/" class="line-height-unset">Contact Us</a></li>
             <li class="bg-base-color">
